# CompilerDesignSCNU

./: .gitignore  README.md
task1/cui/: CMakeLists.txt  main.cpp
task1/cui/src/: dfa.cpp  dfa.h  generateLexer.cpp  generateLexer.h  lexer.cpp  lexer.h  nfa.cpp  nfa.h  pattern.cpp  pattern.h  regExp.h  regScanner.cpp
task1/cui/tests/: TINYinput.txt  TINYpatterns.txt  miniCinput.txt
task1/gui/Lexer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
task1/gui/Lexer/src/: dfa.cpp  dfa.h  generateLexer.cpp  generateLexer.h  lexer.cpp  lexer.h  pattern.cpp  pattern.h  regExp.cpp  regExp.h  regScanner.cpp  regScanner.h  util.cpp
task1/gui/Lexer/tests/: miniCinput.txt  miniCpatterns.txt
task2/cui/: CMakeLists.txt  main.cpp
task2/cui/src/: grammar.cpp  grammar.h  lr0Parser.cpp  lr0Parser.h  pattern.cpp  pattern.h  slr1Parser.h
task2/cui/test/: grammar.txt  grammar1.txt  minic.txt
task2/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
task2/gui/src/: grammar.cpp  grammar.h  lr0Parser.cpp  lr0Parser.h  pattern.cpp  pattern.h  slr1Parser.cpp  slr1Parser.h  util.h
task2/gui/test/: BNF.txt  minic.txt  minicInput0.txt  tiny.txt  tinyInput0.txt
